--- a/css/contact.css
+++ b/css/contact.css
@@ -77,6 +77,7 @@ main {
     width: 100%;
     height: 42px;
     text-align: left;
+    text-indent: 1em;
 }
 
 .contact-form-textarea {
@@ -85,6 +86,7 @@ main {
     width: 100%;
     height: 82px;
     text-align: left;
+    text-indent: 1em;
 }
 
 .contact-form-submit-box {
